# web_scraper

./: .gitignore  README.md  pyproject.toml  requirements.txt
playwright/async/: async_abstract_scraper.py  async_playwright_scraper.py
playwright/async_/: async_abstract_browser_controller.py  async_playwright_scraper.py
selenium/sync/: selenium_scraper.py
