[project]
name = "web_scraper"
version = "0.1.0"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "multipledispatch",
    "pytest-playwright",
    "pyyaml",
    "requests",
    "selenium",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["web_scraper"]